--- a/1. Frontend-Docs.md
+++ b/1. Frontend-Docs.md
@@ -2,4 +2,4 @@
 
 |                 Setup             |          Hook           |              Service             |         Generic Class        |
 |-------------------------------------------|-------------------------------------------|------------------------------------------------|---------------------------------------------|
-| [useCashiers Hook](./GettingStarted.ts) | [useCashiers Hook](./hook.useCashiers.ts) | [Cashier Service](./service.cashierService.ts) | [HttpService Class](./class.httpService.ts) |
+| [Setup](./GettingStarted.ts) | [useCashiers Hook](./hook.useCashiers.ts) | [Cashier Service](./service.cashierService.ts) | [HttpService Class](./class.httpService.ts) |
